<resources>
    <string name="app_name">SimpleMyDot</string>
    <string name="ramdom_dot">RAMDOM DOT</string>
    <string name="clear_dots">Clear Dots</string>
    <string name="open_activity">OPEN ACTIVITY</string>
    <string name="share">SHARE</string>
    <string name="undo">Undo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="change_color">Change Color</string>
</resources>
