<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="kmitl.lab05.chayanon58070021.simplemydot.fragment.DotFragment">

    <kmitl.lab05.chayanon58070021.simplemydot.view.DotView
        android:id="@+id/dotview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="10"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/randomBtn"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />



    <Button
        android:id="@+id/randomBtn"
        android:onClick="onRandomDot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ramdom_dot"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/undoBtn"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button

        android:id="@+id/clearBtn"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:onClick="onClearDots"
        android:text="@string/clear_dots"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomBtn"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/shareBtn"
        android:onClick="onShareBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/share"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="7dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomBtn"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/clearBtn" />

    <Button
        android:id="@+id/undoBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/undo"
        android:onClick="onUndo"
        app:layout_constraintRight_toLeftOf="@+id/clearBtn"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
