<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kmitl.lab05.chayanon58070021.simplemydot.fragment.EditDotFragment"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginStart="8dp"
        app:layout_constraintRight_toLeftOf="@+id/confirmBtn"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="9dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_marginEnd="8dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="9dp" />

    <TextView
        android:id="@+id/seekVal"
        android:layout_width="73dp"
        android:layout_height="25dp"
        android:textSize="20dp"
        android:text=""
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="56dp"
        android:layout_marginTop="133dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:max="150"
        android:scrollbarSize="20dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/seekVal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/colorBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="9dp"
        android:text="@string/change_color"
        app:layout_constraintRight_toRightOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />
</android.support.constraint.ConstraintLayout>
